<resources>
    <string name="ParkingAPP">Parking APP</string>
    <string name="review">Displays a real-time snapshot of all nearby parking options: Parking Information. The app offers a navigation option for the closest parking near the destination using Google Maps</string>
    <string name="menu">Menu</string>
    <string name="Settings">Settings</string>
    <string name="Last_Parking">Last Parking</string>
    <string name="SaveLocation">Save Location</string>
    <string name="HistoryLocation">Location History</string>
    <string name="Team">Team</string>
    <string name="main">main</string>


    <string name="parkingaroundme">Parking Around Me</string>
    <string name="app_name">FinalAppAndroid</string>
    <string name="name">Name</string>
    <string name="car">Car</string>
    <string name="number">Number</string>
    <string name="hintName">Your Name</string>
    <string name="hintCar">Your Car</string>
    <string name="hintNumber">Your Car Number</string>
    <string name="errorDriverName">Name is invalid</string>
    <string name="errorDriverCar">Car name is invalid</string>
    <string name="errorDriverCarNumber">Number is invalid</string>
    <string name="save">Save Location</string>
    <string name="updateLocation">Update Location</string>
    <string name="deleteLocationList">Delete All Locations</string>
    <string name="titleForPopUpSuccess">Success</string>
    <string name="titleForPopUpFailed">Failed!</string>
    <string name="messageForPopUpSuccess">Your details saved successfully!</string>
    <string name="messageForPopUpFailed">Your details did not saved! Please try again!</string>

    <string name="messageForPopUpSaveLocationFalied">Unable to save your location, it might be that already saved or encounter any issue! Please try again or check history!</string>

    <string name="lastParking">Last Parking</string>
    <string name="saveLocation">Save New Location</string>
    <string name="parkingHistory">Show Parking History</string>
    <string name="parkingAroundMe">Parking Around Me</string>
    <string name="developers">developers</string>
    <string name="settings">settings</string>


    <string name="amitTitle">Amit Salim</string>
    <string name="amitDescription">Android Studio Developer</string>
    <string name="country">Israel</string>
    <string name="amitJob">Computer Software</string>
    <string name="amitStudies">B.Sc in Information Technology</string>
    <string name="amitdesc1">Like to develop and learn new techs</string>
    <string name="amitID">ID: 204001705</string>
    <string name="summary">Summary</string>
</resources>
