<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10sp"
                android:text="@string/ParkingAPP"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review" />

            <TextView
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/moveSettings"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/Settings" />

            <Button
                android:id="@+id/moveLastParking"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/Last_Parking" />

            <Button
                android:id="@+id/moveToSaveLocation"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/SaveLocation" />

            <Button
                android:id="@+id/moveToLocationHistory"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/HistoryLocation" />

            <Button
                android:id="@+id/parkingAroundMeButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/parkingaroundme" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="346dp"
                android:fitsSystemWindows="true"
                app:srcCompat="@drawable/download" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>