<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="53dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Settings"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="92dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="66dp"
            android:layout_height="68dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="30sp" />

        <Space
            android:layout_width="58dp"
            android:layout_height="61dp"
            android:layout_weight="1" />


        <EditText
            android:id="@+id/editName"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintName"
            android:inputType="textPersonName"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/carLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car"
            android:textSize="30sp" />

        <Space
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editCar"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintCar"
            android:inputType="textPersonName"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NumberLabel"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editNumber"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintNumber"
            android:inputType="textPersonName"
            android:textSize="30sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="93dp" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveDriverDetails"
        android:text="Save" />

</LinearLayout>