<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LastParking">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:text="Last Parking"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/driverNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/car"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/driverCarInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverNameInput"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/number"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/driverNumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverCarInput"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="30sp" />

    <WebView
        android:id="@+id/webViewContact"
        android:layout_width="match_parent"
        android:layout_height="454dp"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="49dp" />

</RelativeLayout>